--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -37,8 +37,8 @@
             <h2>{{ product.name }}</h2>
             <p><strong>Price:</strong> ${{ product.price }}</p>
             <p><strong>Description:</strong> {{ product.description }}</p>
-            <p class="rating"><strong>Rating:</strong> {{ product.rating }} / 5</p>
-            <p class="date"><strong>Date Added:</strong> {{ product.date }}</p>
+            <p><strong>Rating:</strong> {{ product.rating }} / 5</p>
+            <p><strong>Date Added:</strong> {{ product.date }}</p>
         </div>
     {% endfor %}
 
